# SDL2_Test

Libraries/SDL2/SDL2-2.30.5/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  sdl2-config  sdl2.pc
Libraries/SDL2/SDL2-2.30.5/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  testatomic.test  testaudioinfo.test  testautomation.test  testbounds.test  testdisplayinfo.test  testerror.test  testfilesystem.test  testkeys.test  testlocale.test  testplatform.test  testpower.test  testqsort.test  testsurround.test  testthread.test  testtimer.test  testver.test
Libraries/SDL2/SDL2_image-2.8.2/: CMakeCache.txt  Makefile  SDL2_image-.pc  cmake_install.cmake
Libraries/google_test/1.14.0/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Libraries/google_test/1.14.0/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Libraries/google_test/1.14.0/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Projects/Number systems 2/: CMakeLists.txt
Projects/Number systems 2/include/: EventReader.h  Letters.h  RendererWraper.h  Universal.h  WindowWraper.h
Projects/Number systems 2/src/: EventReader.cpp  Letters.cpp  RendererWraper.cpp  Universal.cpp  WindowWraper.cpp  calc_func.cpp  main.cpp
Projects/UI_Creator/: CMakeLists.txt  Letters.txt
Projects/UI_Creator/include/: Button.h  EventReader.h  Scroll.h  Universal.h
Projects/UI_Creator/src/: Button.cpp  ColorBox.cpp  EventReader.cpp  Font.cpp  InputTextBox.cpp  MultipleOptionChoise.cpp  Scroll.cpp  Switcher.cpp  Universal.cpp
Projects/UI_Creator/test/: Font_test.cpp  MockRender.h  OneOptionChoise_test.cpp  Switcher_test.cpp  decay.h
include/: BaseBox.h  BaseTextBox.h  ColorBox.h  Font.h  IRenderable.h  IScrollable.h  InputTextBox.h  MultipleOptionChoise.h  OneOptionChoise.h  Switcher.h  TextBox.h
src/: BaseBox.cpp  BaseTextBox.cpp  IScrollable.cpp  OneOptionChoise.cpp  TextBox.cpp  main.cpp
test/: BaseBox_test.cpp  BaseTextBox_test.cpp  Button_test.cpp  ColorBox_test.cpp  InputTextBox_test.cpp  Point_test.cpp  TextBox_test.cpp  main_test.cpp
